--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,211 +1,57 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFFFFF"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="8dp"
-    android:paddingBottom="4dp"
-    android:paddingHorizontal="16dp">
-    <ScrollView
+    tools:context=".ui.homeui.recycling.RecyclingFragment">
+
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/progressIndicator"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/previewImageView"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="1"
-       >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
-                android:id="@+id/rwgt0u3xul4g"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/layout_shape"
-                android:paddingTop="39dp"
-                android:paddingBottom="22dp"
-                android:layout_marginBottom="64dp"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/r8xzhpjqr2nq"
-                    android:textColor="#000000"
-                    android:textSize="26sp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginHorizontal="28dp"
-                    android:layout_height="0dp"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:text="@string/how_can_you_nrecycle_your_remaining_waste"
-                    />
-                <TextView
-                    android:id="@+id/ry7kkutpgs0m"
-                    android:textColor="#000000"
-                    android:textSize="14sp"
-                    android:layout_marginBottom="74dp"
-                    android:layout_marginStart="28dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:text="@string/with_you_we_will_help_ecology"
-                    />
-                <LinearLayout
-                    android:id="@+id/recycling"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/layout_shape"
-                    android:paddingVertical="28dp"
-                    android:paddingHorizontal="34dp"
-                    android:layout_marginHorizontal="13dp"
-                    android:orientation="horizontal">
-                    <LinearLayout
-                        android:id="@+id/ro3boye5o4b8"
-                        android:layout_width="141dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/r9sd20ksjpia"
-                            android:textColor="#000000"
-                            android:textSize="16sp"
-                            android:layout_marginBottom="4dp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:text="@string/my_waste_pick_up"
-                            />
-                        <TextView
-                            android:id="@+id/rak8oaqb53ci"
-                            android:textColor="#000000"
-                            android:textSize="12sp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:text="Request for pick up"
-                            />
-                    </LinearLayout>
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        />
-                    <ImageView
-                        android:id="@+id/reur5qv7sc1l"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:src="@mipmap/ic_launcher"
-                        android:scaleType="fitXY"
-                        />
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/rqt06g01fkl"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:layout_marginBottom="33dp"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/rit1zsuvevkf"
-                    android:textColor="#000000"
-                    android:textSize="16sp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:text="More services"
-                    />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_place_holder" />
 
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/r03tfniwsl2se"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:id="@+id/pickup"
-                    android:layout_width="98dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_shape"
-                    android:paddingVertical="16dp"
-                    android:orientation="vertical">
-                    <ImageView
+    <Button
+        android:id="@+id/galleryButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/gallery"
+        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginHorizontal="34dp"
-                        android:src="@mipmap/ic_launcher"
-                        android:scaleType="fitXY"
-                        />
+    <Button
+        android:id="@+id/analyzeButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/analyze"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="@string/pick_up"
-                        android:textAlignment="center"
-                        android:textSize="12sp" />
-                </LinearLayout>
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    />
-                <LinearLayout
-                    android:id="@+id/rg423zbvg9hf"
-                    android:layout_width="98dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_shape"
-                    android:paddingVertical="16dp"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:id="@+id/rfpni4m7n58r"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginHorizontal="34dp"
-                        android:src="@mipmap/ic_launcher"
-                        android:scaleType="fitXY"
-                        />
-                    <TextView
-                        android:textColor="#000000"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="@string/education"
-                        />
-                </LinearLayout>
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    />
-                <LinearLayout
-                    android:id="@+id/rxodgxrcqqwm"
-                    android:layout_width="98dp"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/layout_shape"
-                    android:paddingVertical="16dp"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:id="@+id/rrct4gpp05v"
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginHorizontal="34dp"
-                        android:src="@mipmap/ic_launcher"
-                        android:scaleType="fitXY"
-                        />
-                    <TextView
-                        android:id="@+id/rllben92co0b"
-                        android:textColor="#000000"
-                        android:textSize="12sp"
-                        android:layout_gravity="center"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="Recycling"
-                        />
-                </LinearLayout>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
