--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,31 @@
         android:id="@+id/navigation_home"
         android:name="com.example.resikapp.ui.homeui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_navigation_recycling"
+            app:destination="@id/navigation_recycling" />
+    </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.resikapp.ui.homeui.recycling.DashboardFragment"
+        android:id="@+id/navigation_recycling"
+        android:name="com.example.resikapp.ui.homeui.recycling.RecyclingFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_dashboard" >
+        <action
+            android:id="@+id/action_navigation_recycling_to_resultFragment"
+            app:destination="@id/resultFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.example.resikapp.ui.homeui.setting.NotificationsFragment"
+        android:name="com.example.resikapp.ui.homeui.setting.SettingFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/resultFragment"
+        android:name="com.example.resikapp.ui.homeui.recycling.ResultFragment"
+        android:label="fragment_result"
+        tools:layout="@layout/fragment_result"
+        />
 </navigation>
