--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFFFFFFF"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -62,7 +61,7 @@
                         android:orientation="vertical">
                         <TextView
                             android:id="@+id/r9sd20ksjpia"
-                            android:textColor="#000000"
+                            android:fontFamily="@font/poppins_medium"
                             android:textSize="16sp"
                             android:layout_marginBottom="4dp"
                             android:layout_height="wrap_content"
@@ -71,7 +70,6 @@
                             />
                         <TextView
                             android:id="@+id/rak8oaqb53ci"
-                            android:textColor="#000000"
                             android:textSize="12sp"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
@@ -99,14 +97,13 @@
                 android:layout_marginBottom="33dp"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/rit1zsuvevkf"
-                    android:textColor="#000000"
+
                     android:textSize="16sp"
                     android:layout_marginEnd="4dp"
                     android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_weight="1"
-                    android:text="More services"
+                    android:text="@string/more_services"
                     />
 
             </LinearLayout>
@@ -149,10 +146,10 @@
                     android:layout_weight="1"
                     />
                 <LinearLayout
+                    android:background="@drawable/layout_shape"
                     android:id="@+id/education"
                     android:layout_width="98dp"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/layout_shape"
                     android:paddingVertical="16dp"
                     android:orientation="vertical">
                     <ImageView
@@ -177,7 +174,7 @@
                     android:layout_weight="1"
                     />
                 <LinearLayout
-                    android:id="@+id/rxodgxrcqqwm"
+                    android:id="@+id/recycling_button"
                     android:layout_width="98dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/layout_shape"
@@ -194,7 +191,7 @@
                         />
                     <TextView
                         android:id="@+id/rllben92co0b"
-                        android:textColor="#000000"
+
                         android:textSize="12sp"
                         android:layout_gravity="center"
                         android:layout_height="wrap_content"
