--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,6 +71,7 @@
                         <TextView
                             android:id="@+id/rak8oaqb53ci"
                             android:textSize="12sp"
+                            android:textColor="#808080"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
                             android:text="@string/request_for_pick_up"
@@ -97,13 +98,13 @@
                 android:layout_marginBottom="33dp"
                 android:orientation="horizontal">
                 <TextView
-
                     android:textSize="16sp"
                     android:layout_marginEnd="4dp"
                     android:layout_height="wrap_content"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:text="@string/more_services"
+                    android:textColor="#808080"
                     />
 
             </LinearLayout>
