--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -117,7 +117,7 @@
 
                 </LinearLayout>
                 <Button
-                    android:id="@+id/btn_register"
+                    android:id="@+id/btnLogin"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp"
                     android:text="@string/login"
