--- a/app/src/main/res/layout/activity_pickup_user.xml
+++ b/app/src/main/res/layout/activity_pickup_user.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     android:padding="16dp">
 
     <TextView
@@ -13,7 +14,8 @@
         android:text="Tambah Data"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:paddingBottom="16dp"/>
+        android:paddingBottom="16dp"
+        android:fontFamily="@font/poppins_semibold"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -48,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:text="Tambah PickUp"
                 android:textColor="@android:color/white"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/poppins_semibold"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -59,7 +62,8 @@
         android:text="History"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:paddingBottom="16dp"/>
+        android:paddingBottom="16dp"
+        android:fontFamily="@font/poppins_semibold"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/historyRecyclerView"
