--- a/app/src/main/res/layout/item_education.xml
+++ b/app/src/main/res/layout/item_education.xml
@@ -32,14 +32,16 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:text="Lorem Ipsum"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:fontFamily="@font/poppins_semibold"/>
 
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et est libero." />
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et est libero."
+            android:fontFamily="@font/poppins_medium"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
