--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -7,39 +7,79 @@
     app:cardCornerRadius="16dp"
     app:cardElevation="4dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:padding="16dp">
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:cardCornerRadius="8dp"
-            android:layout_margin="5dp"
-            android:elevation="10dp">
-            <ImageView
-                android:id="@+id/avatarImageView"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                />
-        </androidx.cardview.widget.CardView>
 
         <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="match_parent"
+            android:id="@+id/fromTextView"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
             android:padding="8dp"
-            android:text="Lorem Ipsum"
-            android:textStyle="bold" />
+            android:text="from"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:background="@drawable/right_border" />
 
         <TextView
-            android:id="@+id/descriptionTextView"
-            android:layout_width="match_parent"
+            android:id="@+id/usnFromTextView"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
             android:padding="8dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et est libero." />
+            android:text="usn"
+            android:textSize="18sp"
+            android:layout_below="@+id/fromTextView"
+            android:background="@drawable/right_border"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/toTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="120dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:padding="8dp"
+            android:text="to"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/usnToTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="120dp"
+            android:fontFamily="@font/poppins_medium"
+            android:padding="8dp"
+            android:text="usn"
+            android:textSize="16sp"
+            android:layout_below="@+id/toTextView"/>
+
+        <TextView
+            android:id="@+id/weightTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toTextView"
+            android:layout_marginStart="250dp"
+            android:layout_marginTop="-20dp"
+            android:fontFamily="@font/poppins_medium"
+            android:padding="8dp"
+            android:text="0.0kg"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/usnToTextView"
+            android:layout_marginStart="150dp"
+            android:fontFamily="@font/poppins_medium"
+            android:padding="8dp"
+            android:text="--/-----/----"
+            android:textSize="16sp"/>
+
+    </RelativeLayout>
 </androidx.cardview.widget.CardView>
