--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,39 +7,55 @@
     android:orientation="vertical"
     tools:context=".ui.homeui.setting.SettingFragment">
 
+
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/ivPicture"
-            android:layout_marginTop="26dp"
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:layout_marginTop="26dp"
+            android:contentDescription="@string/gg"
             android:src="@drawable/img" />
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_marginTop="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/name" />
+            android:text="@string/name"
+            android:textSize="18sp" />
 
 
         <TextView
             android:id="@+id/tvEmail"
-            android:layout_marginTop="6dp"
-            android:layout_marginBottom="26dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#808080"
-            android:text="arnoldarmando07@gmail.com"
-           />
+            android:layout_marginTop="6dp"
+            android:layout_marginBottom="26dp"
+            android:text="@string/gmail"
+            android:textColor="#808080" />
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
