--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -1,15 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:orientation="vertical">
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/educationTitle"
         android:layout_width="match_parent"
@@ -28,6 +22,24 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:fontFamily="@font/poppins_medium"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Data tidak tersedia"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:visibility="gone"
+        android:textColor="#FF0000" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
