--- a/app/src/main/res/layout/activity_pick_up.xml
+++ b/app/src/main/res/layout/activity_pick_up.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.pickupUser.PickUpActivity">
+    tools:context=".ui.pickupUser.PickupUserActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
