--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -45,6 +45,12 @@
             android:layout_marginBottom="26dp"
             android:text="@string/gmail"
             android:textColor="#808080" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logout"
+            android:background="@drawable/layout_shape"/>
     </LinearLayout>
 
     <ProgressBar
