--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -2,11 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
-
+    tools:context=".ui.splash.SplashScreenActivity"
+    android:background="@color/colorPrimary"
+    >
 
     <TextView
         android:id="@+id/textView"
@@ -14,6 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/resikapp"
         android:textStyle="bold"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:fontFamily="@font/poppins_medium"
         app:layout_constraintBottom_toBottomOf="parent"
