--- a/app/src/main/res/layout/activity_pickup_user.xml
+++ b/app/src/main/res/layout/activity_pickup_user.xml
@@ -30,13 +30,6 @@
             android:padding="16dp">
 
             <EditText
-                android:id="@+id/nameEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Masukkan Nama"
-                android:padding="16dp"/>
-
-            <EditText
                 android:id="@+id/addressEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,6 +57,34 @@
         android:textStyle="bold"
         android:paddingBottom="16dp"
         android:fontFamily="@font/poppins_semibold"/>
+
+    <TextView
+        android:id="@+id/nullTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Belum Ada History"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/errorTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Data tidak tersedia"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:visibility="gone"
+        android:textColor="#FF0000"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/historyRecyclerView"
