--- a/app/src/main/res/layout/activity_pickup_user.xml
+++ b/app/src/main/res/layout/activity_pickup_user.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tambahDataTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tambah Data"
+        android:text="@string/addData"
         android:textSize="18sp"
         android:textStyle="bold"
         android:paddingBottom="16dp"
@@ -33,7 +33,7 @@
                 android:id="@+id/addressEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Masukkan Alamat"
+                android:hint="@string/inputAdress"
                 android:padding="16dp"
                 android:layout_marginTop="8dp"/>
 
@@ -41,7 +41,7 @@
                 android:id="@+id/addPickupButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tambah PickUp"
+                android:text="@string/addPikup"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins_semibold"/>
@@ -52,7 +52,7 @@
         android:id="@+id/historyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="History"
+        android:text="@string/History"
         android:textSize="18sp"
         android:textStyle="bold"
         android:paddingBottom="16dp"
@@ -62,7 +62,7 @@
         android:id="@+id/nullTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Belum Ada History"
+        android:text="@string/noHistory"
         android:textSize="18sp"
         android:gravity="center"
         android:padding="16dp"
@@ -72,7 +72,7 @@
         android:id="@+id/errorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Data tidak tersedia"
+        android:text="@string/dataUnavailable"
         android:textSize="18sp"
         android:gravity="center"
         android:padding="16dp"
