--- a/app/src/main/res/layout/activity_education.xml
+++ b/app/src/main/res/layout/activity_education.xml
@@ -8,7 +8,7 @@
         android:id="@+id/educationTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Education"
+        android:text="@string/titleEducation"
         android:textSize="24sp"
         android:textStyle="bold"
         android:padding="16dp"
@@ -18,7 +18,7 @@
         android:id="@+id/educationSubtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="We are here to help you understand and care more about waste"
+        android:text="@string/subTitleEducation"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:fontFamily="@font/poppins_medium"/>
@@ -34,7 +34,7 @@
         android:id="@+id/errorTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Data tidak tersedia"
+        android:text="@string/dataUnavailable"
         android:textSize="18sp"
         android:gravity="center"
         android:padding="16dp"
