--- a/app/src/main/res/layout/item_oncoming.xml
+++ b/app/src/main/res/layout/item_oncoming.xml
@@ -13,68 +13,29 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/fromTextView"
-            android:layout_width="110dp"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_semibold"
-            android:padding="8dp"
-            android:text="from"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:background="@drawable/right_border" />
-
-        <TextView
-            android:id="@+id/usnFromTextView"
-            android:layout_width="110dp"
+            android:id="@+id/usernameTextView"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
             android:padding="8dp"
-            android:text="usn"
-            android:textSize="18sp"
-            android:layout_below="@+id/fromTextView"
-            android:background="@drawable/right_border"/>
+            android:textSize="18sp"/>
 
         <TextView
-            android:id="@+id/toTextView"
-            android:layout_width="100dp"
+            android:id="@+id/adressTextView"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="0dp"
-            android:layout_marginStart="120dp"
-            android:fontFamily="@font/poppins_semibold"
-            android:padding="8dp"
-            android:text="to"
-            android:textStyle="bold"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/usnToTextView"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:layout_marginStart="120dp"
+            android:layout_marginStart="0dp"
             android:fontFamily="@font/poppins_medium"
             android:padding="8dp"
-            android:text="usn"
             android:textSize="16sp"
-            android:layout_below="@+id/toTextView"/>
-
-        <TextView
-            android:id="@+id/weightTextView"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/toTextView"
-            android:layout_marginStart="250dp"
-            android:layout_marginTop="-20dp"
-            android:fontFamily="@font/poppins_medium"
-            android:padding="8dp"
-            android:text="0.0kg"
-            android:textSize="16sp" />
+            android:layout_below="@+id/usernameTextView"/>
 
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/usnToTextView"
+            android:layout_below="@id/adressTextView"
             android:layout_marginStart="150dp"
             android:fontFamily="@font/poppins_medium"
             android:padding="8dp"
