--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -46,6 +46,14 @@
             android:text="@string/gmail"
             android:textColor="#808080" />
 
+        <Button
+            android:id="@+id/btn_Logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/logout"
+            android:textStyle="bold"
+            android:drawableLeft="@drawable/baseline_logout"/>
+
 
     </LinearLayout>
 
