--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent">
 
     <ScrollView
-        android:id="@+id/r9ebnah87xx8"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -142,6 +141,36 @@
                         android:inputType="phone"
                         android:hint="@string/nomer_hp"
                         android:textColor="#000000"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:background="@drawable/layout_shape"
+                    android:paddingHorizontal="13dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginHorizontal="27dp"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginEnd="0dp"
+                        android:src="@mipmap/ic_launcher"
+                        android:scaleType="fitXY"/>
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_margin="16dp"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="phone"
+                        android:hint="@string/nomer_hp"
                         android:textSize="20sp" />
                 </LinearLayout>
 
