fix setting and clean code

--- a/app/src/main/res/layout/activity_detail_education.xml
+++ b/app/src/main/res/layout/activity_detail_education.xml
@@ -15,7 +15,7 @@
             android:id="@+id/educationDetailTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="detailEducation"
+            android:text="@string/detailEducation"
             android:textSize="24sp"
             android:textStyle="bold"
             android:paddingBottom="8dp"
